--- a/public/index.html
+++ b/public/index.html
@@ -75,7 +75,8 @@
 		<div class="text-center text-muted">
 			<p>A demo by <a href="http://scotch.io">Scotch</a>.</p>
 			<p>Read the <a href="http://scotch.io/tutorials/javascript/creating-a-single-page-todo-app-with-node-and-angular">tutorial</a>.</p>
-			<a href="{{'https://github.com/sergeikoltochihin/TODOApp/tree/v' + version }}" target="_blank">Version: {{version}}</a>
+			<!--<a href="{{'https://github.com/sergeikoltochihin/TODOApp/tree/v' + version }}" target="_blank">Version: {{version}}</a>-->
+			<p>Version: {{version}}</p>
 		</div>
 
 	</div>
